--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -63,7 +63,8 @@
     <div class="article-content">
       <h1><%= @article.title %></h1>
       <!-- display du contenu de l'article -->
-      <%= simple_format(@article.content) %>
+      <%= simple_format(@content) %>
+      <%= link_to "#{@label_link}", "#{@href}", target: "_blank" %>
       <!-- display des paragraphes -->
       <% if @article.paragraphs.any? %>
         <div class="paragraph">
