--- a/app/assets/stylesheets/components/_form.scss
+++ b/app/assets/stylesheets/components/_form.scss
@@ -58,13 +58,24 @@ textarea#review_content {
   box-shadow: 0 0 10px rgba(0,0,0,0.2);
   padding: 10px;
   display: none;
+  margin-bottom: 10px;
 }
 .link-form {
   box-shadow: 0 0 10px rgba(0,0,0,0.2);
   padding: 10px;
   display: none;
+  margin-bottom: 10px;
+  position: relative;
 }
 
+.close {
+  position: absolute;
+  right: 10px;
+  top:10px;
+  &:hover {
+    cursor: pointer;
+  }
+}
 .visible {
   display: block;
 }
