change texte in club page

--- a/app/views/pages/club.html.erb
+++ b/app/views/pages/club.html.erb
@@ -2,18 +2,18 @@
   <div class="row align-items-center club-card">
     <div class="col-sm-12 col-md-7 club-description">
       <p class="president">Président : Gérard HOCHET</p>
-      <p>Le Brocéliande BackGammon Club est né en octobre 2014.</p>
-      <p>Cette association a pour objet de promouvoir la pratique et le développement du Backgammon au niveau local et régional</p>
+      <p>Le Brocéliande BackGammon Club est né en octobre 2014. Le club a été reconnu d’Intérêt Général 11 avril 2017 notamment en raison de son implication auprès des plus jeunes.</p>
+      <p>Cette association a pour objet de promouvoir la pratique et le développement du Backgammon au niveau local et régional.</p>
       <ul>
         <li>Organisation de rencontres</li>
         <li>Participation aux championnats Nationaux et Internationaux</li>
-        <li>Un des objectifs complémentaires est de favoriser le développement du jeu notamment auprès des plus jeunes</li>
+        <li>Un des objectifs complémentaires est de favoriser le développement du jeu notamment auprès des plus jeunes et des publics en situation d’exclusion sociale</li>
       </ul>
       <p>Les rendez-vous du club :</p>
       <ul>
         <li>Rendez-vous hebdomadaires <span id="isabelle" data-markers="<%= @isa_markers.to_json %>">chez Isabelle </span> les mardi de 12h00 à 15h00</li>
         <li>Rendez vous les 1 er et 3 eme jeudi soir de chaque mois au <span id="roof" data-markers="<%= @roof_markers.to_json %>">ROOF </span> à rennes (hotel dieu)</li>
-        <li>Promotion du BackGammon les jeudis après-midi à l‘école du Sacré-Cœur d’Iffendic auprès des classes de CM1 et CM2</li>
+        <li>Promotion du BackGammon les lundis après-midi au Centre Pénitentiaire de Vezin le Coquet</li>
       </ul>
       <!-- <p>Venez nous retrouver pour jouer <span id="isabelle" data-markers="<%= @isa_markers.to_json %>">chez Isabelle </span>ou au bar <span id="avec" data-markers="<%= @avec_markers.to_json %>">"Avec"</span> -->
         <div class="card-product zoomIn" id="card-isabelle">
@@ -39,3 +39,6 @@
     </div>
   </div>
 </div>
+
+
+
