--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,6 +2,8 @@
 <html>
   <head>
     <title>BBGC Broceliande Backgammon Club</title>
+    <meta name="description" content="Brocéliande Backgammon club est une association de jeu de Backgammon en Bretagne. Rejoignez notre club près de Rennes au roof et à Plélan le Grand chez Isabelle ">
+    <%= favicon_link_tag asset_path('logo_bbgc.png') %>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
     <link href="https://fonts.googleapis.com/css?family=Montserrat:300,500,900&display=swap" rel="stylesheet">
