style card players

--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -5,7 +5,7 @@
   </div>
   <div class="footer-copyright">
     <p>BrocéliandeBackgammonClub <i class="far fa-copyright"></i> 2020</p>
-    <p>numéro SIRET : 828 094 250 00010</p>
+    <!-- <p>numéro SIRET : 828 094 250 00010</p> -->
   </div>
 </div>
 
