--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -76,9 +76,9 @@
 .card-players {
   box-shadow: 0 0 10px rgba(0,0,0,0.2);
   padding-top: 30px;
-  padding-bottom: 50px;
+  padding-bottom: 35px;
   margin-bottom: 20px;
-  background: linear-gradient(-250deg, $orange 20%, white 20%, white 80%, black 20%)
+  background: linear-gradient(-250deg, $orange 20%, white 20%, white 80%)
 }
 
 .players-illustration {
@@ -95,6 +95,27 @@
 .players-illustration h6 {
   margin-bottom: 0;
   font-family: 'Montserrat', sans-serif;
+}
+.players-class{
+  display: flex;
+  justify-content: space-around;
+  margin-top: 50px;
+}
+
+.class {
+  text-align: center;
+  width: 30%;
+  border-radius: 4px;
+  box-shadow: 0 0 10px rgba(200, 200, 200, 0.3);
+  font-weight: lighter;
+  font-size: 14px;
+  // background: linear-gradient(-65deg, $orange 20%, white 20%, white 80%)
+}
+
+.type{
+  color: white;
+  background-color: black;
+  text-align: center;
 }
 
 .name {
