--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -24,8 +24,9 @@
 .footer .fa-heart {
   color: #D23333;
 }
-.footer-copyright {
+.footer-copyright p {
   font-size: 15px;
+  margin-bottom: 0px;
 }
 .content-wrapper {
   min-height: calc(100vh - 230px);
