--- a/app/views/pages/joueurs.html.erb
+++ b/app/views/pages/joueurs.html.erb
@@ -1,6 +1,7 @@
 <div class="container joueurs">
   <div class="row">
-    <div class="col-sm-12 col-md-6 col-lg-3">
+
+    <div class="col-sm-12 col-md-6 col-lg-4 col-xl-3">
       <!-- card players -->
       <div class="card-players">
         <div class="d-flex justify-content-center align-items-center my-3">
@@ -9,150 +10,22 @@
           </div>
         </div>
         <p class="name">GERARD HOCHET</p>
-        <p class="text-center">ELO: 1672</p>
-        <p class="text-center classement">class: 42ème</p>
-      </div>
-    </div>
-
-
-    <div class="col-sm-12 col-md-6 col-lg-3">
-      <!-- card players -->
-      <div class="card-players">
-        <div class="d-flex justify-content-center align-items-center my-3">
-          <div class="players-illustration">
-            <h6>GH</h6>
+        <div class="players-class">
+          <div class="class">
+            <p class="type">LIVE</p>
+            <p>1476ème</p>
+            <p>Elo: 134</p>
+          </div>
+          <div class="class">
+            <p class="type">ONLINE</p>
+            <p>42ème</p>
+            <p>Elo: 1672</p>
           </div>
         </div>
-        <p class="name">GERARD HOCHET</p>
-        <p class="text-center">ELO: 1672</p>
-        <p class="text-center classement">class: 42ème</p>
       </div>
     </div>
 
-    <div class="col-sm-12 col-md-6 col-lg-3">
-      <!-- card players -->
-      <div class="card-players">
-        <div class="d-flex justify-content-center align-items-center my-3">
-          <div class="players-illustration">
-            <h6>GH</h6>
-          </div>
-        </div>
-        <p class="name">GERARD HOCHET</p>
-        <p class="text-center">ELO: 1672</p>
-        <p class="text-center classement">class: 42ème</p>
-      </div>
-    </div>
 
-    <div class="col-sm-12 col-md-6 col-lg-3">
-      <!-- card players -->
-      <div class="card-players">
-        <div class="d-flex justify-content-center align-items-center my-3">
-          <div class="players-illustration">
-            <h6>GH</h6>
-          </div>
-        </div>
-        <p class="name">GERARD HOCHET</p>
-        <p class="text-center">ELO: 1672</p>
-        <p class="text-center classement">class: 42ème</p>
-      </div>
-    </div>
-
-    <div class="col-sm-12 col-md-6 col-lg-3">
-      <!-- card players -->
-      <div class="card-players">
-        <div class="d-flex justify-content-center align-items-center my-3">
-          <div class="players-illustration">
-            <h6>GH</h6>
-          </div>
-        </div>
-        <p class="name">GERARD HOCHET</p>
-        <p class="text-center">ELO: 1672</p>
-        <p class="text-center classement">class: 42ème</p>
-      </div>
-    </div>
-
-    <div class="col-sm-12 col-md-6 col-lg-3">
-      <!-- card players -->
-      <div class="card-players">
-        <div class="d-flex justify-content-center align-items-center my-3">
-          <div class="players-illustration">
-            <h6>GH</h6>
-          </div>
-        </div>
-        <p class="name">GERARD HOCHET</p>
-        <p class="text-center">ELO: 1672</p>
-        <p class="text-center classement">class: 42ème</p>
-      </div>
-    </div>
-
-    <div class="col-sm-12 col-md-6 col-lg-3">
-      <!-- card players -->
-      <div class="card-players">
-        <div class="d-flex justify-content-center align-items-center my-3">
-          <div class="players-illustration">
-            <h6>GH</h6>
-          </div>
-        </div>
-        <p class="name">GERARD HOCHET</p>
-        <p class="text-center">ELO: 1672</p>
-        <p class="text-center classement">class: 42ème</p>
-      </div>
-    </div>
-
-    <div class="col-sm-12 col-md-6 col-lg-3">
-      <!-- card players -->
-      <div class="card-players">
-        <div class="d-flex justify-content-center align-items-center my-3">
-          <div class="players-illustration">
-            <h6>GH</h6>
-          </div>
-        </div>
-        <p class="name">GERARD HOCHET</p>
-        <p class="text-center">ELO: 1672</p>
-        <p class="text-center classement">class: 42ème</p>
-      </div>
-    </div>
-
-    <div class="col-sm-12 col-md-6 col-lg-3">
-      <!-- card players -->
-      <div class="card-players">
-        <div class="d-flex justify-content-center align-items-center my-3">
-          <div class="players-illustration">
-            <h6>GH</h6>
-          </div>
-        </div>
-        <p class="name">GERARD HOCHET</p>
-        <p class="text-center">ELO: 1672</p>
-        <p class="text-center classement">class: 42ème</p>
-      </div>
-    </div>
-
-    <div class="col-sm-12 col-md-6 col-lg-3">
-      <!-- card players -->
-      <div class="card-players">
-        <div class="d-flex justify-content-center align-items-center my-3">
-          <div class="players-illustration">
-            <h6>GH</h6>
-          </div>
-        </div>
-        <p class="name">GERARD HOCHET</p>
-        <p class="text-center">ELO: 1672</p>
-        <p class="text-center classement">class: 42ème</p>
-      </div>
-    </div>
-
-    <div class="col-sm-12 col-md-6 col-lg-3">
-      <!-- card players -->
-      <div class="card-players">
-        <div class="d-flex justify-content-center align-items-center my-3">
-          <div class="players-illustration">
-            <h6>GH</h6>
-          </div>
-        </div>
-        <p class="name">GERARD HOCHET</p>
-        <p class="text-center">ELO: 1672</p>
-        <p class="text-center classement">class: 42ème</p>
-      </div>
-    </div>
   </div>
 </div>
+
