--- a/app/views/pages/joueurs.html.erb
+++ b/app/views/pages/joueurs.html.erb
@@ -3,26 +3,28 @@
 
     <div class="col-sm-12 col-md-6 col-lg-4 col-xl-3">
       <!-- card players -->
-      <div class="card-players">
-        <div class="d-flex justify-content-center align-items-center my-3">
-          <div class="players-illustration">
-            <h6>GH</h6>
+      <% @players.each do |player| %>
+        <div class="card-players">
+          <div class="d-flex justify-content-center align-items-center my-3">
+            <div class="players-illustration">
+              <h6><%= player.first_name.first.capitalize %> <%= player.last_name.first.capitalize %></h6>
+            </div>
+          </div>
+          <p class="name"><%= player.first_name.capitalize %> <%= player.last_name.capitalize %></p>
+          <div class="players-class">
+            <div class="class">
+              <p class="type">LIVE</p>
+              <p><%= player.live_class %>ème</p>
+              <p>elo: <%= player.live_elo %></p>
+            </div>
+            <div class="class">
+              <p class="type">ONLINE</p>
+              <p><%= player.online_class %>ème</p>
+              <p>elo: <%= player.online_elo %></p>
+            </div>
           </div>
         </div>
-        <p class="name">GERARD HOCHET</p>
-        <div class="players-class">
-          <div class="class">
-            <p class="type">LIVE</p>
-            <p>1476ème</p>
-            <p>Elo: 134</p>
-          </div>
-          <div class="class">
-            <p class="type">ONLINE</p>
-            <p>42ème</p>
-            <p>Elo: 1672</p>
-          </div>
-        </div>
-      </div>
+      <% end %>
     </div>
 
 
