style the form for players

--- a/app/views/pages/club.html.erb
+++ b/app/views/pages/club.html.erb
@@ -9,7 +9,7 @@
         <li>Participation aux championnats Nationaux et Internationaux</li>
         <li>Un des objectifs complémentaires est de favoriser le développement du jeu notamment auprès des plus jeunes et des publics en situation d’exclusion sociale</li>
       </ul>
-      <p>Les rendez-vous du club :</p>
+      <p>les rendez-vous du club :</p>
       <ul>
         <li>Rendez-vous hebdomadaires <span id="isabelle" data-markers="<%= @isa_markers.to_json %>">chez Isabelle </span> les mardi de 12h00 à 15h00</li>
         <li>Rendez vous les 1 er et 3 eme jeudi soir de chaque mois au <span id="roof" data-markers="<%= @roof_markers.to_json %>">ROOF </span> à rennes (hotel dieu)</li>
