create and order players

--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -130,6 +130,10 @@
   font-size: 14px;
 }
 
+.online {
+  background-color: $orange;
+}
+
 .card-reviews {
   border-bottom: 1px solid $orange;
   margin-bottom: 10px;
