--- a/app/views/pages/joueurs.html.erb
+++ b/app/views/pages/joueurs.html.erb
@@ -23,7 +23,7 @@
                 <% end %>
               </div>
               <div class="class">
-                <p class="type">ONLINE</p>
+                <p class="type online">ONLINE</p>
                 <% if player.online_class.nil? %>
                   <p>NC</p>
                   <p>NC</p>
