--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -25,10 +25,17 @@
   opacity: 1;
 }
 
-.footer-copyright p {
+.footer-copyright {
   font-size: 15px;
   margin-bottom: 0px;
 }
+
+.siret{
+  font-size: 10px;
+  margin-bottom: 0px;
+  opacity: 0.7;
+}
+
 .content-wrapper {
   min-height: calc(100vh - 230px);
 }
@@ -53,7 +60,7 @@
     font-size: 16px;
     padding: 0px 5px;
   }
-  .footer-copyright p {
+  .footer-copyright {
     font-size: 10px;
   }
 }
