--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -3,9 +3,9 @@
     <a href="https://www.facebook.com/groups/484175808407503/?ref=bookmarks" target="blank"><i class="fab fa-facebook"></i></a>
     <a href="https://www.ffbg.fr/" target="blank">ffbg</a>
   </div>
-  <div class="footer-copyright">
-    <p>BrocéliandeBackgammonClub <i class="far fa-copyright"></i> 2020</p>
-    <!-- <p>numéro SIRET : 828 094 250 00010</p> -->
+  <div>
+    <p class="footer-copyright">BrocéliandeBackgammonClub <i class="far fa-copyright"></i> 2020</p>
+    <p class="siret">numéro SIRET : 828 094 250 00010</p>
   </div>
 </div>
 
