uppercase last_name

--- a/app/views/pages/joueurs.html.erb
+++ b/app/views/pages/joueurs.html.erb
@@ -10,7 +10,7 @@
                 <h6><%= player.first_name.first.capitalize %> <%= player.last_name.first.capitalize %></h6>
               </div>
             </div>
-            <p class="name"><%= player.first_name.capitalize %> <%= player.last_name.capitalize %></p>
+            <p class="name"><%= player.first_name.capitalize %> <%= player.last_name.upcase %></p>
             <div class="players-class">
               <div class="class">
                 <p class="type">LIVE</p>
