change text in form contact

--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -15,7 +15,7 @@
       </div>
     </div>
     <div class="form-group" >
-      <%= f.text_area :message, placeholder: "message", class: "form-control" %>
+      <%= f.text_area :message, placeholder: "votre message", class: "form-control" %>
     </div>
     <div>
       <%= f.submit "Envoyer", class:"btn-black" %>
