change font size for title card

--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -29,6 +29,7 @@
 .card-article h3 {
   font-family: 'Montserrat', sans-serif;
   font-weight: 500;
+  font-size: 18px;
   padding: 0.5rem 0.5rem 0.5rem 1rem;
 }
 
