add link pro in footer

--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -5,7 +5,15 @@
   </div>
   <div>
     <p class="footer-copyright">BrocéliandeBackgammonClub <i class="far fa-copyright"></i> 2020</p>
-    <p class="siret">numéro SIRET : 828 094 250 00010</p>
+    <div class="d-flex align-items-center madeby">
+      <p class="mr-2">made by LudoHochet</p>
+      <%= link_to "https://www.linkedin.com/in/ludovic-hochet-9950924a/", target: "_blank", class:"link-pro mr-2" do %>
+        <i class="fab fa-linkedin"></i>
+      <% end %>
+      <%= link_to "https://github.com/LudoHochet", target: "_blank", class:"link-pro" do %>
+        <i class="fab fa-github"></i>
+      <% end %>
+    </div>
   </div>
 </div>
 
