ajout du numero de siret dans page club

--- a/app/views/pages/club.html.erb
+++ b/app/views/pages/club.html.erb
@@ -15,6 +15,7 @@
         <li>Rendez vous les 1 er et 3 eme jeudi soir de chaque mois au <span id="roof" data-markers="<%= @roof_markers.to_json %>">ROOF </span> à rennes (hotel dieu)</li>
         <li>Promotion du BackGammon les lundis après-midi au Centre Pénitentiaire de Vezin le Coquet</li>
       </ul>
+      <p>numéro SIRET : 828 094 250 00010</p>
         <div class="card-product zoomIn" id="card-isabelle">
           <%= image_tag "isabelle.png" %>
           <div class="card-product-infos">
