texte en français pour crédit

--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -6,7 +6,7 @@
   <div>
     <p class="footer-copyright">BrocéliandeBackgammonClub <i class="far fa-copyright"></i> 2020</p>
     <div class="d-flex align-items-center madeby">
-      <p class="mr-2">made by LudoHochet</p>
+      <p class="mr-2">site crée par LudoHochet</p>
       <%= link_to "https://www.linkedin.com/in/ludovic-hochet-9950924a/", target: "_blank", class:"link-pro mr-2" do %>
         <i class="fab fa-linkedin"></i>
       <% end %>
