--- a/app/assets/stylesheets/pages/_club.scss
+++ b/app/assets/stylesheets/pages/_club.scss
@@ -35,6 +35,12 @@
   }
 }
 
+.siret{
+  font-size: 12px;
+  // margin-bottom: 0px;
+  // opacity: 0.7;
+}
+
 #map {
   box-shadow: 0 0 10px rgba(0,0,0,0.2);
   // z-index: -1;
