--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -54,8 +54,8 @@
                 <%= link_to "Contact", contact_path, class:"nav-link" %>
                 <div class="dropdown-divider"></div>
               </div>
-              <%= link_to "Login", new_user_session_path, class:"nav-link" %>
-              <%= link_to "Signup ", new_user_registration_path, class:"nav-link" %>
+              <%= link_to "Connexion", new_user_session_path, class:"nav-link" %>
+              <%#= link_to "Signup ", new_user_registration_path, class:"nav-link" %>
             <% end %>
           </div>
         </div>
