add edit button on each cards players

--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -104,6 +104,13 @@
   margin-top: 50px;
 }
 
+.player-edit {
+  position: absolute;
+  top: 10px;
+  right: 20px;
+  color: black;
+}
+
 .class {
   text-align: center;
   width: 30%;
