--- a/app/views/pages/joueurs.html.erb
+++ b/app/views/pages/joueurs.html.erb
@@ -32,6 +32,7 @@
               <% end %>
             </div>
           </div>
+          <i class="fas fa-user-edit player-edit"></i>
         </div>
       </div>
     <% end %>
