--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -83,6 +83,24 @@
   background: linear-gradient(-250deg, $orange 20%, white 20%, white 80%)
 }
 
+.card-plus {
+  // box-shadow: 0 0 10px rgba(0,0,0,0.2);
+  padding-top: 30px;
+  padding-bottom: 35px;
+  margin-bottom: 20px;
+  & a {
+    color: $orange;
+    &:hover {
+      color: rgb(40,40,50);
+    }
+  }
+}
+
+.add-player {
+  font-size: 4rem;
+  padding: 100px 0px;
+}
+
 .players-illustration {
   background-color: black;
   color: white;
@@ -108,7 +126,13 @@
   position: absolute;
   top: 10px;
   right: 20px;
-  color: black;
+  & a {
+    color:black;
+    opacity: 0.7;
+    &:hover {
+      opacity: 1;
+    }
+  }
 }
 
 .class {
