replace log out by deconnexion

--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -46,7 +46,7 @@
                 <%= link_to "Contact", contact_path, class:"nav-link" %>
                 <div class="dropdown-divider"></div>
               </div>
-              <%= link_to "Log out", destroy_user_session_path, method: :delete, class:"nav-link" %>
+              <%= link_to "Deconnexion", destroy_user_session_path, method: :delete, class:"nav-link" %>
             <% else %>
               <div class="hidden-links">
                 <%= link_to "Le club", club_path, class:"nav-link" %>
