--- a/app/views/pages/joueurs.html.erb
+++ b/app/views/pages/joueurs.html.erb
@@ -1,4 +1,54 @@
 <div class="container joueurs">
+
+  <div class="new_card d-flex justify-content-around align-items-center">
+
+    <!-- 1.1 -->
+    <div class="position">
+      <p>1</p>
+    </div>
+    <!-- fin 1.1 -->
+
+    <!-- 1.2 -->
+    <div class="d-flex justify-content-between align-items-center flex-grow-1">
+      <!-- 2.1 -->
+      <div class="players-illustration">
+        <h6>GH</h6>
+      </div>
+      <!-- fin 2.1 -->
+
+      <!-- 2.2 -->
+      <div class="identite mr-auto">
+        <p>Gérard Hochet</p>
+      </div>
+      <!-- fin 2.2 -->
+
+
+      <!-- 2.3 -->
+      <div class="d-flex justify-content-between align-items-center">
+
+        <!-- 3.1 -->
+        <div class="d-flex">
+          <p class="mr-2">43</p>
+          <p class="mr-2">Elo: 987</p>
+          <p>Live</p>
+        </div>
+        <!-- fin 3.1 -->
+
+        <!-- 3.2 -->
+        <div class="d-flex">
+          <p class="mr-2">22</p>
+          <p class="mr-2">Elo: 1454</p>
+          <p>OnLine</p>
+        </div>
+        <!-- fin 3.2 -->
+      </div>
+      <!-- fin 2.3 -->
+    </div>
+    <!-- fin 1.2 -->
+
+  </div>
+  <!-- fin de la card -->
+
   <div class="row">
     <!-- card players -->
     <% @players.each do |player| %>
