--- a/app/views/pages/joueurs.html.erb
+++ b/app/views/pages/joueurs.html.erb
@@ -18,27 +18,27 @@
 
       <!-- 2.2 -->
       <div class="identite mr-auto">
-        <p>Gérard Hochet</p>
+        <p>Gérard HOCHET</p>
       </div>
       <!-- fin 2.2 -->
 
 
       <!-- 2.3 -->
-      <div class="d-flex justify-content-between align-items-center">
+      <div class="stats d-flex justify-content-between align-items-center">
 
         <!-- 3.1 -->
-        <div class="d-flex">
-          <p class="mr-2">43</p>
-          <p class="mr-2">Elo: 987</p>
-          <p>Live</p>
+        <div class="live_stats d-flex justify-content-between align-items-center">
+          <p>43</p>
+          <p>Elo: 987</p>
+          <p class="live_cat">LIVE</p>
         </div>
         <!-- fin 3.1 -->
 
         <!-- 3.2 -->
-        <div class="d-flex">
-          <p class="mr-2">22</p>
-          <p class="mr-2">Elo: 1454</p>
-          <p>OnLine</p>
+        <div class="online_stats d-flex justify-content-between align-items-center">
+          <p>22</p>
+          <p>Elo: 1454</p>
+          <p class="online_cat">ONLINE</p>
         </div>
         <!-- fin 3.2 -->
       </div>
