--- a/app/assets/stylesheets/config/_fonts.scss
+++ b/app/assets/stylesheets/config/_fonts.scss
@@ -18,6 +18,7 @@
 
 // @import url('https://fonts.googleapis.com/css?family=Montserrat:300,500,900&display=swap');
 @import url('https://fonts.googleapis.com/css?family=Montserrat:300,400,700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Kaushan+Script&display=swap');
 // @import url('https://fonts.googleapis.com/css?family=Bitter:400,700&display=swap');
 $body-font: 'Montserrat', sans-serif;
 $headers-font: 'Merriweather', serif;
