--- a/app/views/pages/joueurs.html.erb
+++ b/app/views/pages/joueurs.html.erb
@@ -1,10 +1,10 @@
 <div class="container joueurs">
-
+  <% @players.each_with_index do |player, index| %>
   <div class="new_card d-flex justify-content-around align-items-center">
 
     <!-- 1.1 -->
     <div class="position">
-      <p>1</p>
+      <p><%= index + 1 %></p>
     </div>
     <!-- fin 1.1 -->
 
@@ -12,13 +12,13 @@
     <div class="d-flex justify-content-between align-items-center flex-grow-1">
       <!-- 2.1 -->
       <div class="players-illustration">
-        <h6>GH</h6>
+        <h6><%= player.first_name.first.capitalize %> <%= player.last_name.first.capitalize %></h6>
       </div>
       <!-- fin 2.1 -->
 
       <!-- 2.2 -->
       <div class="identite mr-auto">
-        <p>Gérard HOCHET</p>
+        <p><%= player.first_name.capitalize %> <%= player.last_name.upcase %></p>
       </div>
       <!-- fin 2.2 -->
 
@@ -28,16 +28,16 @@
 
         <!-- 3.1 -->
         <div class="live_stats d-flex justify-content-between align-items-center">
-          <p>43</p>
-          <p>Elo: 987</p>
+          <p> <i class="fas fa-medal"></i><%= player.live_class %></p>
+          <p>Elo: <%= player.live_elo %></p>
           <p class="live_cat">LIVE</p>
         </div>
         <!-- fin 3.1 -->
 
         <!-- 3.2 -->
         <div class="online_stats d-flex justify-content-between align-items-center">
-          <p>22</p>
-          <p>Elo: 1454</p>
+          <p> <i class="fas fa-medal"></i><%= player.online_class %></p>
+          <p>Elo: <%= player.live_elo %></p>
           <p class="online_cat">ONLINE</p>
         </div>
         <!-- fin 3.2 -->
@@ -48,7 +48,7 @@
 
   </div>
   <!-- fin de la card -->
-
+  <% end %>
   <div class="row">
     <!-- card players -->
     <% @players.each do |player| %>
