--- a/app/views/pages/joueurs.html.erb
+++ b/app/views/pages/joueurs.html.erb
@@ -28,16 +28,38 @@
 
         <!-- 3.1 -->
         <div class="live_stats d-flex justify-content-between align-items-center">
-          <p> <i class="fas fa-medal"></i><%= player.live_class %></p>
-          <p>Elo: <%= player.live_elo %></p>
+          <% if player.live_class.nil? %>
+            <div class="d-flex justify-content-between align-items-center">
+              <%= image_tag "france.png" %>
+              <p class="ml-1">N.C</p>
+            </div>
+            <p class="ml-1">Elo: N.C</p>
+          <% else %>
+            <div class="d-flex justify-content-between align-items-center">
+              <%= image_tag "france.png" %>
+              <p class="ml-1"><%= player.live_class %></p>
+            </div>
+            <p class="ml-1">Elo: <%= player.live_elo %></p>
+          <% end %>
           <p class="live_cat">LIVE</p>
         </div>
         <!-- fin 3.1 -->
 
         <!-- 3.2 -->
         <div class="online_stats d-flex justify-content-between align-items-center">
-          <p> <i class="fas fa-medal"></i><%= player.online_class %></p>
-          <p>Elo: <%= player.live_elo %></p>
+          <% if player.online_class.nil? %>
+            <div class="d-flex justify-content-between align-items-center">
+              <%= image_tag "france.png" %>
+              <p class="ml-1">N.C</p>
+            </div>
+            <p class="ml-1">Elo: N.C</p>
+          <% else %>
+            <div class="d-flex justify-content-between align-items-center">
+              <%= image_tag "france.png" %>
+              <p class="ml-1"><%= player.online_class %></p>
+            </div>
+            <p class="ml-1">Elo: <%= player.online_elo %></p>
+          <% end %>
           <p class="online_cat">ONLINE</p>
         </div>
         <!-- fin 3.2 -->
@@ -49,6 +71,8 @@
   </div>
   <!-- fin de la card -->
   <% end %>
+
+  <!-- ancienne cards -->
   <div class="row">
     <!-- card players -->
     <% @players.each do |player| %>
