--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -75,98 +75,6 @@
   }
 }
 
-.card-players {
-  box-shadow: 0 0 10px rgba(0,0,0,0.2);
-  padding-top: 30px;
-  padding-bottom: 35px;
-  margin-bottom: 20px;
-  background: linear-gradient(-250deg, $orange 20%, white 20%, white 80%)
-}
-
-.card-plus {
-  // box-shadow: 0 0 10px rgba(0,0,0,0.2);
-  padding-top: 30px;
-  padding-bottom: 35px;
-  margin-bottom: 20px;
-  & a {
-    color: $orange;
-    &:hover {
-      color: rgb(40,40,50);
-    }
-  }
-}
-
-.add-player {
-  font-size: 4rem;
-  padding: 100px 0px;
-}
-
-.players-illustration {
-  background-color: black;
-  color: white;
-  border-radius: 50%;
-  height: 80px;
-  width: 80px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-.players-illustration h6 {
-  margin-bottom: 0;
-  font-family: 'Montserrat', sans-serif;
-}
-.players-class{
-  display: flex;
-  justify-content: space-around;
-  margin-top: 50px;
-}
-
-.player-edit {
-  position: absolute;
-  top: 10px;
-  right: 20px;
-  & a {
-    color:black;
-    opacity: 0.7;
-    &:hover {
-      opacity: 1;
-    }
-  }
-}
-
-.class {
-  text-align: center;
-  width: 30%;
-  border-radius: 4px;
-  box-shadow: 0 0 10px rgba(200, 200, 200, 0.3);
-  font-weight: lighter;
-  font-size: 14px;
-  // background: linear-gradient(-65deg, $orange 20%, white 20%, white 80%)
-}
-
-.type{
-  color: white;
-  background-color: black;
-  text-align: center;
-}
-
-.name {
-  color: $orange;
-  text-align: center;
-  margin-top: 20px;
-  margin-bottom: 25px;
-}
-
-.classement {
-  font-weight: lighter;
-  font-size: 14px;
-}
-
-.online {
-  background-color: $orange;
-}
-
 .card-reviews {
   border-bottom: 1px solid $orange;
   margin-bottom: 10px;
@@ -188,14 +96,11 @@
   font-size: 15px;
 }
 
-// test pour nouvelle card joueur
-//
-//
+//nouvelle card joueur
 
-.new_card {
-  // pour espacer du reste
+.card_player {
+  position: relative;
   margin: 10px 0;
-  //
   padding: 20px;
   border-radius: 10px;
   box-shadow: 0 0 30px rgba(200, 200, 200, 0.7);
@@ -205,7 +110,7 @@
   }
 }
 
-.new_card img {
+.card_player img {
   width: 30px;
 }
 
@@ -214,6 +119,22 @@
   color: white;
   font-size: 40px;
   font-family: 'Kaushan Script', cursive;
+}
+
+.players-illustration {
+  background-color: black;
+  color: white;
+  border-radius: 50%;
+  height: 80px;
+  width: 80px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.players-illustration h6 {
+  margin-bottom: 0;
+  font-family: 'Montserrat', sans-serif;
 }
 
 .identite {
@@ -257,9 +178,36 @@
 }
 
 
+.player-edit {
+  position: absolute;
+  top: 10px;
+  right: 20px;
+  & a {
+    color:black;
+    opacity: 0.5;
+    &:hover {
+      opacity: 1;
+    }
+  }
+}
 
+.add-player {
+  font-size: 4rem;
+  // padding: 20px 0px;
+}
 
-
+.card-plus {
+  // box-shadow: 0 0 10px rgba(0,0,0,0.2);
+  padding-top: 20px;
+  // padding-bottom: 35px;
+  margin-bottom: 20px;
+  & a {
+    color: $orange;
+    &:hover {
+      color: rgb(40,40,50);
+    }
+  }
+}
 
 
 
