--- a/app/views/pages/joueurs.html.erb
+++ b/app/views/pages/joueurs.html.erb
@@ -39,7 +39,7 @@
           </div>
           <!-- fin 3.1 -->
           <!-- 3.2 -->
-          <div class="online_stats d-flex justify-content-between align-items-center">
+          <div class="online_stats lighter d-flex justify-content-between align-items-center">
             <% if player.online_class.nil? %>
               <div class="d-flex justify-content-between align-items-center">
                 <%= image_tag "france.png" %>
