--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -162,6 +162,15 @@
   font-size: 12px;
 }
 
+.live_class {
+  background-color: black;
+  color: white;
+  padding: 10px;
+  font-size: 16px;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
 .online_stats {
   padding: 10px;
   // margin-right: 20px;
@@ -180,6 +189,14 @@
   font-size: 12px;
 }
 
+.online_class {
+  background-color: $orange;
+  color: white;
+  padding: 10px;
+  font-size: 16px;
+  border-radius: 5px;
+  cursor: pointer;
+}
 
 .player-edit {
   position: absolute;
